atualização no design

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap"
+    rel="stylesheet">
 
     <!--/ adicionando a fonte-->
 </head>
@@ -57,17 +56,13 @@
             </div>
         </section>
 
-        <div class="linha-preta">
-            <div class="linha-laranja"></div>
-        </div>
-
         <section class="sobre">
             <h2><span>----------</span> SOBRE <span>----------</span></h2>
 
             <div class="main-sobre">
                 <div class="texto-sobre">
                     <p>Na nossa barbearia, tradição e estilo caminham juntos. Criamos um ambiente acolhedor e 
-                    autêntico, ondecada cliente é atendido com atenção aos detalhes e respeito ao seu estilo pessoal.</p>
+                    autêntico, onde cada cliente é atendido com atenção aos detalhes e respeito ao seu estilo pessoal.</p>
 
                     <br>
 
@@ -79,10 +74,6 @@
                 <img src="img/img-sobre.jpg" alt="Imagem sobre">
             </div>
         </section>
-
-       <div class="linha-preta">
-            <div class="linha-laranja"></div>
-        </div>
 
         <section class="serviços">
 
