finalização do projeto

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="interface">
             <section class="logo">
                 <img src="img/logo.jpeg" alt="Logotipo">
@@ -30,16 +30,15 @@
             <section class="menu-desktop">
                 <nav>
                     <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">SOBRE</a></li>
-                        <li><a href="#">SERVIÇOS</a></li>
-                        <li><a href="#">LOCAL</a></li>
+                        <li><a href="#Home">HOME</a></li>
+                        <li><a href="#Sobre">SOBRE</a></li>
+                        <li><a href="#Serviços">SERVIÇOS</a></li>
                     </ul>
                 </nav>
             </section>
 
             <section class="bnt">
-                <a href="#"><button>Contatos</button></a>
+                <a href="#CONTATOS"><button>Contatos</button></a>
             </section>
         </div>
 
@@ -49,14 +48,14 @@
     <div class="linha-laranja-header"></div>
 
     <main>
-        <section class="home">
+        <section id="Home" class="home">
             <div class="interface">
                 <h1>ELEVE SEU VISUAL COM A <span>BARBA PERDEITA</sanp>
                 </h1>
             </div>
         </section>
 
-        <section class="sobre">
+        <section id="Sobre" class="sobre">
             <h2><span>----------</span> SOBRE <span>----------</span></h2>
 
             <div class="main-sobre">
@@ -75,17 +74,85 @@
             </div>
         </section>
 
-        <section class="serviços">
+        <section class="sobre-galeria">
+            <h2><span>----------</span> Galeria <span>----------</span> </h2>
 
+            <div class="sobre-galeria-img">
+                <img rel="preload" src="img/img-sobre-demontração-1.jpg" alt="galeria de imagens">
+
+                <img rel="preload" src="img/img-sobre-demontração-2.jpg" alt="galeria de imagens">
+
+                <img rel="preload" src="img/img-sobre-demontração-3.jpg" alt="galeria de imagens">
+
+                <img rel="preload" src="img/img-sobre-demonstração-4.jpg" alt="galeria de imagens">
+
+                <img rel="preload" src="img/img-sobre-demontração-5.jpg" alt="galeria de imagens">
+
+                <img rel="preload" src="img/img-sobre-demontração-6.jpg" alt="galeria de imagens">
+            </div>
         </section>
 
-        <section class="local">
+        <section id="Serviços" class="serviços">
 
+        <div class="area-serviços-title"></div>
+            <div class="title">
+            <h2><span>----------</span> serviços <span>----------</span> </h2>
+            </div>
+
+            <div class="area-serviços">
+                <article class="area-benefit">
+                    <samp class="img-benefit"><img src="img/1.png"></samp>
+                    
+                    <div class="text-serviços">
+                        <h2>BARBEIRO DE QUALIDADE</h2>
+
+                        <P>Curso de Barbeiro Profissional</P>
+                    </div>
+                </article>
+
+                <article class="area-benefit">
+                    <samp class="img-benefit"><img src="img/2.png"></samp>
+
+                    <div class="text-serviços">
+                        <h2>BARBEIRO DE QUALIDADE</h2>
+
+                        <P>Curso de Gestão de Negócios</P>
+                    </div>
+                </article>
+
+                <article class="area-benefit">
+                    <samp class="img-benefit"><img src="img/3.png"></samp>
+
+                    <div class="text-serviços">
+                    <h2>BARBEIRO DE QUALIDADE</h2>
+
+                    <P>Curso de Marketing Digital</P>
+                    </div>
+                </article>
+            </div>
+        </div>
+        </section>
+
+        <section id="Local" class="local">
+            <h2><span>----------</span> Contados <span>----------</span> </h2>
+
+            <iframe loading="eager" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.137711695648!2d-46.555412475382525!3d-23.742468118269358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce41a9a287cb4d%3A0x2d429b68ce4cfe4f!2sParque%20Terra%20Nova%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1751987319824!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
 
-    <footer>
+    <footer id="CONTATOS" class="Contatos">
+        <p>Email: 12345@gmail.com</p>
 
+        <div class="img-contatos">
+            <a href="https://wa.me/5511950289543"><img src="img/whatsapp.jpeg" alt="whatsapp"></a>
+            <a href="https://www.instagram.com/vitor.gabriel.xavier/"><img src="img/instagramjpeg.jpeg" alt="instagram"></a>
+            <a href="https://www.facebook.com/share/16qZPE4Ry4/"><img src="img/facebook.png" alt="facebook"></a>
+            <a href="https://mail.google.com/mail/u/0/#sent?compose=jrjtXLCPdrQQwsKqGRltfCKnqSsjhPwsBtnLVcGJbMKhCNTMqmTGWLHnNMzLvPHgxTmlcXnH"><img src="img/gmail.jpg" alt="gmail"></a>
+        </div>
+
+        <p>Numero: +55 (11) 34678-1546</p>
+
+        <a href="#header" class="bnt"><button>Voltar au topo</button></a>
     </footer>
 </body>
 
