--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="SPWmxeqDegRjsLaGeuPF0n55lAZw6zHmnwMugJ4A7OM" />
     <title>Barbearia</title>
 
     <!--CSS-->
