--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
                 <a href="#CONTATOS"><button>Contatos</button></a>
             </section>
         </div>
-
-
     </header>
 
     <div class="linha-laranja-header"></div>
@@ -138,23 +136,28 @@
             <h2><span>----------</span> Contados <span>----------</span> </h2>
 
             <iframe loading="eager" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.137711695648!2d-46.555412475382525!3d-23.742468118269358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce41a9a287cb4d%3A0x2d429b68ce4cfe4f!2sParque%20Terra%20Nova%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1751987319824!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
+            <div id="CONTATOS" class="Contatos">
+                <div class="local-contados">
+                    <p>Numero: +55 (11) 34678-1546</p>
+                    <p>Email: 12345@gmail.com</p>
+                </div>
+
+                <div class="links">
+                    <div class="img-contatos">
+                        <a href="https://wa.me/5511950289543"><img src="img/whatsapp.jpeg" alt="whatsapp"></a>
+                        <a href="https://www.instagram.com/vitor.gabriel.xavier/"><img src="img/instagramjpeg.jpeg" alt="instagram"></a>
+                        <a href="https://www.facebook.com/share/16qZPE4Ry4/"><img src="img/facebook.png" alt="facebook"></a>
+                        <a href="https://mail.google.com/mail/u/0/#sent?compose=jrjtXLCPdrQQwsKqGRltfCKnqSsjhPwsBtnLVcGJbMKhCNTMqmTGWLHnNMzLvPHgxTmlcXnH"><img src="img/gmail.jpg" alt="gmail"></a>
+                    </div>
+
+                    <a href="#header" class="bnt"><button>Voltar au topo</button></a>
+                </div>
+            </div>
         </section>
     </main>
 
-    <footer id="CONTATOS" class="Contatos">
-        <p>Email: 12345@gmail.com</p>
-
-        <div class="img-contatos">
-            <a href="https://wa.me/5511950289543"><img src="img/whatsapp.jpeg" alt="whatsapp"></a>
-            <a href="https://www.instagram.com/vitor.gabriel.xavier/"><img src="img/instagramjpeg.jpeg" alt="instagram"></a>
-            <a href="https://www.facebook.com/share/16qZPE4Ry4/"><img src="img/facebook.png" alt="facebook"></a>
-            <a href="https://mail.google.com/mail/u/0/#sent?compose=jrjtXLCPdrQQwsKqGRltfCKnqSsjhPwsBtnLVcGJbMKhCNTMqmTGWLHnNMzLvPHgxTmlcXnH"><img src="img/gmail.jpg" alt="gmail"></a>
-        </div>
-
-        <p>Numero: +55 (11) 34678-1546</p>
-
-        <a href="#header" class="bnt"><button>Voltar au topo</button></a>
-    </footer>
+    
 </body>
 
 </html>
